login with fake user and message

--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,1 +1,4 @@
-<p>login works!</p>
+<p>Login</p>
+<p><input type="text" placeholder="username" [formControl]="username"></p>
+<p><input type="password" placeholder="password" [formControl]="password"></p>
+<p><button (click)="login()">Login</button></p>
