first login test with gauge and taiko

--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -2,3 +2,4 @@
 <p><input type="text" placeholder="username" [formControl]="username"></p>
 <p><input type="password" placeholder="password" [formControl]="password"></p>
 <p><button (click)="login()">Login</button></p>
+<p><button>{{loginMessage.value}}</button></p>
